feat: add landing page

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,3 +1,14 @@
 <section class="main-section">
-
+  <div class="main-items">
+    <div class="logo">
+      <div class="item"></div>
+    </div>
+    <div class="redberry-svg">
+     <div class="item"></div>
+    </div>
+    <div class="links">
+      <a href="">ჩანაწერის დამატება</a>
+      <a href="">ჩანაწერების სია</a>
+    </div>
+  </div>
 </section>
