--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: "Helvetica Neue";
+  src: url("/assets/fonts/HelveticaNeue.ttc");
+}
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Helvetica Neue", serif;
 }
