feat: update routing and add form-component

--- a/src/app/components/colors.scss
+++ b/src/app/components/colors.scss
@@ -1,2 +1,13 @@
 $blue: #62A1EB;
 $white: #fff;
+$grey: #F7F7F7;
+$black: #232323;
+$black1: #000;
+$blue2: #8AC0E2;
+$black2: #2E2E2E;
+$grey2: #EBEBEB;
+$blue3: #317AD0;
+$light-blue: #6499FF;
+$grey3: #E7F0F8;
+$grey4: #484848;
+
