--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -7,7 +7,7 @@
      <div class="item"></div>
     </div>
     <div class="links">
-      <a href="">ჩანაწერის დამატება</a>
+      <a routerLink="/forms">ჩანაწერის დამატება</a>
       <a href="">ჩანაწერების სია</a>
     </div>
   </div>
