--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -1,5 +1,5 @@
 @import "../../components/colors.scss";
-
+@import "../../components/mixins.scss";
 .main-section{
   width: 100%;
   padding-top: 20px;
@@ -38,14 +38,8 @@
        a{
          width: 387px;
          height: 60px;
-         background-color: $blue;
-         border-radius: 8px;
          margin-bottom: 20px;
-         font-size: 20px;
-         color: $white;
-         display: flex;
-         align-items: center;
-         justify-content: center;
+         @include input;
        }
      }
   }
