--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -2,12 +2,11 @@
 @import "../../components/mixins.scss";
 .main-section{
   width: 100%;
-  padding-top: 20px;
+  padding-top: 10px;
   .main-items{
       width: 100%;
       display: grid;
       grid-template-columns: 1fr;
-      grid-row-gap: 82px;
       .logo{
         width: 100%;
         display: flex;
@@ -23,11 +22,13 @@
         width: 100%;
         display: flex;
         justify-content: center;
+        margin-top: 10px;
         .item{
-          width: 781px;
-          height: 482px;
+          width: 700px;
+          height: 400px;
           background-image: url('/assets/img/layer1.png');
-          background-size: cover;
+          background-size: 100% 100%;
+          background-position: center center;
         }
       }
      .links{
@@ -35,10 +36,11 @@
        display: flex;
        align-items: center;
        flex-direction: column;
+       margin-top: 20px;
        a{
          width: 387px;
          height: 60px;
-         margin-bottom: 20px;
+         margin-top: 20px;
          @include input;
        }
      }
