feat: add more validations and finished forms section

--- a/src/app/components/colors.scss
+++ b/src/app/components/colors.scss
@@ -12,3 +12,9 @@ $grey3: #E7F0F8;
 $grey4: #484848;
 $red: red;
 $green: #23FF39;
+$blue4: #4386A9;
+$red2: #FFF1F1;
+$grey5: #C7C7C7;
+$grey6: #5F5F5F;
+$black3: #202020;
+
