--- a/src/app/forms/information-processing/information-processing.component.scss
+++ b/src/app/forms/information-processing/information-processing.component.scss
@@ -4,6 +4,20 @@
   width: 100%;
   background-color: $grey;
   padding-bottom: 20px;
+  height: 100%;
+  .footer-section{
+    width: 100%;
+    display: flex;
+    padding-top: 30px;
+    align-items: center;
+    justify-content: center;
+    .logo{
+      width: 85px;
+      height: 85px;
+      background-image: url('/assets/img/logo2.png');
+      background-size: cover;
+    }
+  }
   .form-items{
     padding-top: 60px;
     display: grid;
@@ -20,16 +34,15 @@
         flex-direction: column;
         margin-right: 20px;
         align-items: center;
-        a{
+        button{
           font-size: 20px;
           line-height: 24.42px;
           color: $black;
           font-weight: 700;
+          cursor: pointer;
         }
         .line{
           width: 185px;
-          background-color: $black1;
-          border: 2px solid $black1;
           border-radius: 2px;
           margin-top: 15px;
         }
@@ -45,6 +58,98 @@
         display: flex;
         flex-direction: column;
         width: 100%;
+        .laptop-submit-wrapper{
+          width: 100%;
+          margin-top: 60px;
+          .submit-wrapper-items{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            button{
+              color: $blue;
+              font-size: 18px;
+              font-weight: 500;
+              background-color: transparent;
+              cursor: pointer;
+            }
+            input{
+              @include input;
+              width: 219px;
+              height: 60px;
+            }
+          }
+        }
+        .laptop-image-uploader-wrapper{
+          width: 100%;
+          padding-top: 30px;
+          .laptop-image-uploader-items{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .laptop-image-info{
+              display: flex;
+              align-items: center;
+              font-size: 18px;
+              h4{
+                color: $black3;
+                font-size: 18px;
+              }
+              span{
+                font-size: 18px;
+                padding-left: 5px;
+                &:nth-child(1){
+                  color: $black3;
+                }
+                &:nth-child(2){
+                  color: $grey6;
+                }
+              }
+            }
+            .custom-dropzone-uploader{
+              width: max-content;
+              height: max-content;
+              display: flex;
+              align-items: center;
+              justify-content: flex-end;
+              border: 0;
+              .uploader{
+                @include input;
+                padding: 18px 60px;
+              }
+            }
+          }
+        }
+
+        .upload{
+          display: flex;
+          flex-direction: column;
+        }
+        .custom-dropzone{
+          width: 100%;
+          height: 423px;
+          background-color: $grey;
+          border: 2px dashed $blue4;
+          .upload-items{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            align-items: center;
+            svg{
+              margin-bottom: 20px;
+            }
+            h2{
+              color: $blue4;
+            }
+            button{
+              padding: 18px 60px;
+              margin-top: 40px;
+              @include input;
+            }
+          }
+         }
+        }
         .field-wrapper{
           margin-top: 50px;
         }
@@ -69,13 +174,16 @@
             font-size: 18px;
             font-weight: 500;
           }
+          input.ng-valid{
+            border: 1.8px solid $green;
+          }
           input.ng-valid.ng-dirty{
             border: 1.8px solid $green;
           }
           input.ng-invalid.ng-dirty{
             border: 1.8px solid $red;
           }
-          input {
+          > input {
             padding-left: 16px;
             padding-right: 16px;
             font-size: 16px;
@@ -106,7 +214,7 @@
           width: 100%;
           display: flex;
           justify-content: flex-end;
-          input{
+          button{
             width: 176px;
             height: 60px;
             margin-top: 50px;
@@ -156,18 +264,75 @@
             .mat-select-arrow { opacity: 0}
           }
         }
+        .options{
+          display: flex;
+          align-items: center;
+          height: 65%;
+          width: 60%;
+          justify-content: space-between;
+          .option{
+            display: flex;
+            align-items: center;
+            input{
+              width: 20px;
+              height: 40px;
+              align-items: center;
+            }
+            label{
+              transform: translateY(1px);
+              margin-right: 20px;
+              margin-left: 20px;
+            }
+          }
+        }
         .input-fields{
           display: grid;
           grid-template-columns: 1fr 1fr;
           width: 100%;
           grid-column-gap: 60px;
+          svg{
+            margin-left: 20px;
+          }
+          &:nth-child(2){
+            padding-top: 40px;
+            border-bottom: 1px solid $grey5;
+            padding-bottom: 60px;
+          }
+          &:nth-child(3){
+            padding-top: 40px;
+            grid-template-columns: 1fr 1fr 1fr;
+          }
+          &:nth-child(4){
+            padding-top: 40px;
+            border-bottom: 1px solid $grey5;
+            padding-bottom: 60px;
+          }
+          &:nth-child(5){
+            padding-top: 40px;
+          }
+          &:nth-child(6){
+            height: 150px;
+            padding-top: 40px;
+            .options{
+              width: 75%;
+            }
+          }
         }
       }
     }
   }
-}
+
 
 ::ng-deep{
+  ngx-dropzone-image-preview{
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0 !important;
+    img{
+      width: 100% !important;
+      opacity: 1 !important;
+    }
+  }
   .mat-form-field-label {
     color: $black1;
   }
@@ -180,6 +345,11 @@
   }
   .mat-form-field-required-marker{
     opacity: 0;
+  }
+  .mat-form-field.ng-invalid{
+    .mat-form-field-label {
+      color: $black1;
+    }
   }
   .mat-form-field.ng-invalid.ng-touched{
     .mat-form-field-flex{
@@ -206,6 +376,34 @@
   .mat-select-panel {
     background: $white;
   }
+}
+
+
+.active{
+  background-color: $black1;
+  border: 2px solid $black1;
+}
+
+.disableUpload{
+  cursor: pointer;
+}
+
+.top{
+  margin-top: 20px;
+}
+
+.invalid{
+  color: $red !important;
+}
+
+
+.background-inv{
+  background-color: $red2 !important;
+  border: 2px dashed $red !important;
+}
+
+#file{
+  display: none;
 }
 
 
