--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -2,11 +2,12 @@
 @import "../../components/mixins.scss";
 .main-section{
   width: 100%;
-  padding-top: 10px;
+  padding-top: 50px;
   .main-items{
       width: 100%;
       display: grid;
       grid-template-columns: 1fr;
+      grid-row-gap: 40px;
       .logo{
         width: 100%;
         display: flex;
@@ -24,8 +25,8 @@
         justify-content: center;
         margin-top: 10px;
         .item{
-          width: 700px;
-          height: 400px;
+          width: 781px;
+          height: 482px;
           background-image: url('/assets/img/layer1.png');
           background-size: 100% 100%;
           background-position: center center;
