--- a/src/app/laptop-form/laptop-form/laptop-form.component.scss
+++ b/src/app/laptop-form/laptop-form/laptop-form.component.scss
@@ -11,6 +11,9 @@
     padding-top: 30px;
     align-items: center;
     justify-content: center;
+    @media screen and (max-width:600px){
+      display: none;
+    }
     .logo{
       width: 85px;
       height: 85px;
@@ -34,6 +37,11 @@
         flex-direction: column;
         margin-right: 20px;
         align-items: center;
+        @media screen and (max-width: 600px) {
+          &:nth-child(1){
+            display: none;
+          }
+        }
         button{
           font-size: 20px;
           line-height: 24.42px;
@@ -54,6 +62,10 @@
       padding-bottom: 44px;
       padding-top: 96px;
       border-radius: 18px;
+      @media screen and (max-width: 1250px) {
+        width: 100%;
+        padding: 20px;
+      }
       form{
         display: flex;
         flex-direction: column;
@@ -290,6 +302,13 @@
           grid-template-columns: 1fr 1fr;
           width: 100%;
           grid-column-gap: 60px;
+          @media screen and (max-width: 600px) {
+            grid-template-columns: 1fr;
+            grid-row-gap: 30px;
+            &:nth-child(3){
+              grid-template-columns: 1fr !important;
+            }
+          }
           svg{
             margin-left: 20px;
           }
