feat-fix: fix route guard and add popUp

--- a/src/app/user-form/user-form/user-form.component.html
+++ b/src/app/user-form/user-form/user-form.component.html
@@ -6,6 +6,9 @@
           თანამშრომლების ინფო
         </button>
         <div class="line active"></div>
+        <div class="page-count">
+          1/2
+        </div>
       </div>
       <div class="tab">
         <button (click)="toLaptopFormPage()">ლეპტოპის მახასიათებლები</button>
