--- a/src/app/user-form/user-form/user-form.component.scss
+++ b/src/app/user-form/user-form/user-form.component.scss
@@ -13,7 +13,9 @@
     padding-top: 30px;
     align-items: center;
     justify-content: center;
-
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
     .logo {
       width: 85px;
       height: 85px;
@@ -62,11 +64,21 @@
             font-weight: 700;
           }
         }
-
+        .page-count{
+          display: none;
+          font-size: 20px;
+          color: $grey8;
+          @media screen and (max-width: 600px) {
+            display: block;
+          }
+        }
         .line {
           width: 185px;
           border-radius: 2px;
           margin-top: 15px;
+          @media screen and (max-width: 600px) {
+            display: none;
+          }
         }
       }
     }
@@ -77,7 +89,6 @@
       padding-bottom: 44px;
       padding-top: 96px;
       border-radius: 18px;
-
       @media screen and (max-width: 1250px) {
         width: 100%;
         padding: 20px;
