feat: add data-list

--- a/src/app/components/colors.scss
+++ b/src/app/components/colors.scss
@@ -21,3 +21,7 @@ $grey7: #4A4A4A;
 $grey8: #898989;
 $black3:#292929;
 $blue5: #0089A7;
+$blue6: #EAFAFF;
+$blue7: #AED1EA;
+$grey9: #797979;
+$grey10: #A5A5A5;
