--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="links">
       <a routerLink="/user-form">ჩანაწერის დამატება</a>
-      <a href="">ჩანაწერების სია</a>
+      <a routerLink="/data-list">ჩანაწერების სია</a>
     </div>
   </div>
 </section>
