--- a/src/app/laptop-form/laptop-form/laptop-form.component.html
+++ b/src/app/laptop-form/laptop-form/laptop-form.component.html
@@ -268,7 +268,7 @@
         <div class="success-message">
             ჩანაწერი დამატებულია!
         </div>
-        <a  class="toList" routerLink="">სიაში გადაყვანა</a>
+        <a  class="toList" routerLink="/data-list">სიაში გადაყვანა</a>
         <a  class='toHome'routerLink="/home">მთავარი</a>
     </div>
 </div>
